Fixed username display on small screens or long names

--- a/assets/styles/Dashboard/_1030.scss
+++ b/assets/styles/Dashboard/_1030.scss
@@ -49,13 +49,15 @@
 .c-userinfo {
     margin-bottom:1.5em;
     position:static;
+    display:flex;
+    align-items:center;
 }
 .c-userinfo__image, .c-userinfo__text {
-    display:inline-block;
-    vertical-align:middle;
+    display:block;
 }
 .c-userinfo__image {
-    width:50px;
-    height:50px;
     margin-right:1.1em;
+    width:50px;
+    max-width:50px;
+    height:50px;
 }
